--- a/src/ResumeRenderer/ResumeRenderer.css
+++ b/src/ResumeRenderer/ResumeRenderer.css
@@ -18,7 +18,6 @@
 }
 
 .personalInfo {
-    font-size: var(--basic-font-size);
     border-bottom: var(--basic-black-border);
     text-align: var(--left-align);
 }
@@ -32,7 +31,6 @@
 }
 
 .contactList {
-    font-size: var(--basic-font-size);
     text-align: var(--left-align);
     margin-bottom: 30px;
 }
@@ -57,8 +55,7 @@
     display: inline;
 }
 
-.skills {
-    font-size: var(--basic-font-size);
+.skills {     
     text-align: var(--left-align);
 }
 
@@ -86,12 +83,7 @@
     padding-bottom: 0.5rem;
 }
 
-.education {
-    font-size: var(--basic-font-size);
-}
-
 .workExperience {
-    font-size: var(--basic-font-size);
     border-left: var(--basic-black-border);
     padding-left: var(--basic-font-size);
     text-align: var(--left-align);
@@ -119,17 +111,11 @@
     padding-left: var(--basic-font-size);
     list-style: inside;
 }
-
-.projects {
-    font-size: var(--basic-font-size);
-}
-
 .projects h2 {
     text-decoration: underline;
 }
 
-.projects {
-    font-size: var(--basic-font-size);
+.projects {  
     border-left: var(--basic-black-border);
     padding-left: var(--basic-font-size);
     text-align: var(--left-align);
@@ -161,16 +147,11 @@
     list-style: inside;
 }
 
-.education {
-    font-size: var(--basic-font-size);
-}
-
 .education h2 {
     text-decoration: underline;
 }
 
-.education {
-    font-size: var(--basic-font-size);
+.education { 
     border-left: var(--basic-black-border);
     padding-left: var(--basic-font-size);
     text-align: var(--left-align);
@@ -200,4 +181,8 @@
 }
 .organizations h2{
     color: black;
+}
+
+.summary{
+    text-align: left;
 }
