--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -24,9 +24,9 @@ html {
     top: 0;
     z-index: 100;
     background: transparent;
-    gap: 17rem;
+    justify-content: space-around;
     padding: 1rem 2rem;
-    margin: 0.7rem 0.7rem 0.7rem 1.2rem;
+    margin: 0.7rem 0rem 0.7rem 0rem;
 }
 
 .navbar-inner {
@@ -41,6 +41,8 @@ html {
 }
 
 .logo {
+    position: absolute;
+    left: 10%;
     font-weight: bold;
     font-size: 1.4rem;
     color: black;
@@ -209,7 +211,7 @@ html {
 .templateScroll {
     display: flex;
     gap: 2rem;
-    overflow-x: auto;
+    overflow: hidden;
     padding-bottom: 1rem;
     scrollbar-width: none;
 }
