--- a/src/ResumeRenderer/ResumeRenderer.css
+++ b/src/ResumeRenderer/ResumeRenderer.css
@@ -14,6 +14,7 @@
     display: grid;
     gap: 1rem;
     border: 1px solid #ccc;
+    background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -22,65 +23,8 @@
     text-align: var(--left-align);
 }
 
-.personalInfo>h1 {
-    margin-bottom: var(--basic-pixel-margin);
-}
-
-.personalInfo>p {
-    margin-bottom: var(--basic-pixel-margin);
-}
-
-.contactList {
-    text-align: var(--left-align);
-    margin-bottom: 30px;
-}
-
-.contactList h2 {
-    text-decoration: underline;
-    margin-bottom: 10px;
-}
-
-.contactItem {
-    margin-bottom: 10px;
-}
-
-.contactItem p {
-    margin-left: var(--basic-font-size);
-    display: inline;
-}
-
-.contactItem a {
-    color: #333333;
-    margin-left: var(--basic-font-size);
-    display: inline;
-}
-
 .skills {
     text-align: var(--left-align);
-}
-
-.skills h2 {
-    text-decoration: underline;
-    margin-bottom: 10px;
-}
-
-.individualSkill {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--basic-font-size);
-}
-
-.individualSkill div {
-    padding: 0.5rem;
-    border: var(--basic-black-border);
-}
-
-.skills ul {
-    padding-left: var(--basic-font-size);
-}
-
-.skills ul li {
-    padding-bottom: 0.5rem;
 }
 
 .workExperience {
@@ -90,66 +34,11 @@
     margin-bottom: 20px;
 }
 
-.workExperience h2 {
-    text-decoration: underline;
-}
-
-.workPlace {
-    margin-top: var(--basic-pixel-margin);
-    margin-bottom: 10px;
-}
-
-.workExperience h4 {
-    font-weight: 600;
-}
-
-.workExperience p {
-    font-style: italic;
-}
-
-.workExperience ul {
-    padding-left: var(--basic-font-size);
-    list-style: inside;
-}
-
-.projects h2 {
-    text-decoration: underline;
-}
-
 .projects {
     border-left: var(--basic-black-border);
     padding-left: var(--basic-font-size);
     text-align: var(--left-align);
     margin-bottom: 20px;
-}
-
-.icon {
-    font-size: 0.65rem;
-    margin-left: 0.5rem;
-    margin-bottom: 0.3rem;
-    vertical-align: middle;
-}
-
-.eachProject {
-    margin-top: var(--basic-pixel-margin);
-    margin-bottom: 10px;
-}
-
-.projects h4 {
-    font-weight: 600;
-}
-
-.projects p {
-    font-style: italic;
-}
-
-.projects ul {
-    padding-left: var(--basic-font-size);
-    list-style: inside;
-}
-
-.education h2 {
-    text-decoration: underline;
 }
 
 .education {
@@ -159,29 +48,7 @@
     margin-bottom: 20px;
 }
 
-.school {
-    margin-top: var(--basic-pixel-margin);
-    margin-bottom: 10px;
-}
-
-.education h4 {
-    font-weight: 600;
-}
-
-.education p {
-    font-style: italic;
-}
-
-.education ul {
-    padding-left: var(--basic-font-size);
-    list-style: inside;
-}
-
 .organizations {
-    color: black;
-}
-
-.organizations h2 {
     color: black;
 }
 
@@ -189,92 +56,6 @@
     text-align: left;
 }
 
-.profile-card {
-    width: 300px;
-    text-align: center;
-    background: linear-gradient(135deg, #5b7bb0 50%, white 50%);
-    padding: 2rem 1rem 1.5rem;
-    font-family: sans-serif;
-    color: #5b7bb0;
-    position: relative;
-}
-
-.profile-image {
-    width: 120px;
-    height: 120px;
-    border: 6px solid white;
-    border-radius: 50%;
-    overflow: hidden;
-    margin: 0 auto 1rem;
-    background: white;
-}
-
-.profile-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.name {
-    font-size: 1.8rem;
-    font-weight: 600;
-    margin: 0;
-    color: black;
-}
-
-.position {
-    font-size: 1rem;
-    color: #a0a0a0;
-    margin-top: 0.5rem;
-}
-
-.timeline {
-    position: relative;
-    padding-left: 30px;
-    border-left: 3px solid black;
-    margin-left: 10px;
-    margin-top: 10px;
-}
-
-.timeline-item {
-    position: relative;
-    margin-bottom: 30px;
-}
-
-.timeline-item .dot {
-    width: 12px;
-    height: 12px;
-    background-color: black;
-    border-radius: 50%;
-    position: absolute;
-    left: -37px;
-}
-
-
 .languages {
     text-align: var(--left-align);
-}
-
-.languages h2 {
-    text-decoration: underline;
-    margin-bottom: 10px;
-}
-
-.individualLanguage {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--basic-font-size);
-}
-
-.individualLanguage div {
-    padding: 0.5rem;
-    border: var(--basic-black-border);
-}
-
-.languages ul {
-    padding-left: var(--basic-font-size);
-}
-
-.languages ul li {
-    padding-bottom: 0.5rem;
 }
